# strip-comments

./: .gitignore  LICENSE  README.md  package.json  pyproject.toml  strip.py
.github/workflows/: python-package.yml
examples/: block.py  example.py  line.py  strip_example.py
examples/support/: helpers.py
lib/: compile.py  node.py  parse.py
src/strip_comments/: __init__.py  languages.py  models.py  parse.py  stack.py  strip.py  walk.py
src/strip_comments.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/strip_comments/console_scripts/: strip_comments.py
src/strip_comments/lib/: languages.py
tests/: test_ada.py  test_apl.py  test_applescript.py  test_c_cpp.py  test_haskell.py  test_html.py  test_javascript.py  test_lua.py  test_matlab.py  test_ocaml.py  test_other.py  test_pascal.py  test_perl.py  test_php.py  test_python.py  test_ruby.py  test_shebang.py  test_sql.py  test_swift.py
tests/fixtures/: banner.js
