[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "strip-comments"
version = "0.9.0"
authors = [
  { name="igrekus" },
]
description = "Removes comments from source code files. Python port of Jon Schlinkert's strip-comments https://github.com/jonschlinkert/strip-comments"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
test = [
    "pytest>=8",
]

[project.urls]
Documentation = "https://github.com/igrekus/strip-comments/tree/master#readme"
Source = "https://github.com/igrekus/strip-comments"
Issues = "https://github.com/igrekus/strip-comments/issues"

[tool.pytest.ini_options]
addopts = ""
pythonpath = [
  "src"
]
testpaths = "tests"
junit_family = "xunit2"
markers = [
    "unit: fast offline tests",
]
